--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.5.1",
     "meteor-node-stubs": "^1.0.1",
     "popper.js": "^1.16.1",
-    "simpl-schema": "^1.12.0"
+    "simpl-schema": "^1.12.0",
+    "sweetalert2": "^11.1.0"
   }
 }
