--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "@popperjs/core": "^2.9.2",
+    "array-query": "^0.1.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.0.2",
     "jquery": "^3.5.1",
